syntax = "proto3";

package com.example.smartoffice;


option java_multiple_files = true;
option java_package = "com.example.smartoffice";
option java_outer_classname = "SmartLightProto";

service SmartLight {
  rpc TurnOn (LightRequest) returns (LightResponse) {}
  rpc TurnOff (LightRequest) returns (LightResponse) {}
  rpc TurnOnWithUserInput (TurnOnWithUserInputRequest) returns (LightResponse) {}
  rpc TurnOffWithUserInput (TurnOffWithUserInputRequest) returns (LightResponse) {}
}

message LightRequest {
  string workspace_id = 1;
}

message LightResponse {
  string status = 1;
}

message TurnOnWithUserInputRequest {
  string workspace_id = 1;
}

message TurnOffWithUserInputRequest {
  string workspace_id = 1;
}
